--- a/_posts/网络安全/2018-05-20-security.md
+++ b/_posts/网络安全/2018-05-20-security.md
@@ -1,6 +1,6 @@
 ---
 layout: blog
-book: true
+road: true
 background: purple
 background-image: http://ot1cc1u9t.bkt.clouddn.com/17-7-15/43335546.jpg
 title:  "备考信息安全工程师证书的资料整合学习"
