--- a/_posts/算法/2018-05-20-黑箱解决问题.md
+++ b/_posts/算法/2018-05-20-黑箱解决问题.md
@@ -5,23 +5,57 @@ background: purple
 background-image: http://ot1cc1u9t.bkt.clouddn.com/17-7-15/43335546.jpg
 title:  "复杂->简单-黑箱解决问题"
 date:   2018-05-20
-category: 简单传统算法
+category: 编程思想
 tags:
-- 传统算法
+- 固化思维
 - 思维方式
 ---
  
   
 #### 先看一道简单的编程题目
-
+输入两个整数a和b，交换两者的值，然后输出。
 
 #### 第一个思路解法
-考这个证书使用了四天的理论学习时间，注重理论的学习结合本专业的部分实践学习，给了我一个宏观上信息安全-->网络安全 学习的一个过程。备考期间摸清楚了一个大概的知识体系，对部分专业相关问题有一个更宽阔的视野理解，也方便以后如果有机会可以往专业深度方向继续学习。
 
-#### 继续优化空间复杂度解法
+```
+int main()
+{
+    int a,b,c;
+    scanf("%d %d",&a,&b);
+    c=a;
+    a=b;
+    b=c;
+    printf("%d\t%d",a,b);
+    return 0;
+}
+```
+这是第一次想到的解决办法，感觉一般人都会这样子想，这好像是固化在程序员思维里的，好像要经过多少的转换才能够得出一个结果，过分的将一个东西复杂化。
+
+#### 继续优化程序空间复杂度解法
+如果要减少计算过程中开辟的空间，也可以用一些技巧来优化。
+```
+int main()
+{
+    int a,b；
+    scanf("%d %d",&a,&b);
+    b=b+a;
+    a=b-a;
+    b=b-a;
+    printf("%d\t%d",a,b);
+    return 0;
+}
+```
 
 #### 看答案，让人尴尬到发指的黑箱操作思路
-
-
+```
+int main()
+{
+    int a,b；
+    scanf("%d %d",&a,&b);
+    printf("%d\t%d",b,a);
+    return 0;
+}
+```
+虽然这是一道最最最简单不过的小白编程题目，但是第三种答案的思路并不是我的第一解决思路，会习惯性的把简单的事情复杂化，这是思维的一种固化吧，记录下来是为了印象更加深刻，如果有更简单的解法，何必用难的呢。
 
 
