--- a/_posts/计算机科学/2018-07-20-小土刀的系统学习.md
+++ b/_posts/计算机科学/2018-07-20-小土刀的系统学习.md
@@ -14,7 +14,7 @@ tags:
  
   
 #CSAPP学习
-小土刀的博客可以更方便的学习CSAPP
+
 [CSAPP之不周山](https://wdxtub.com/2016/04/16/thick-csapp-lab-1/)
 
-持续更新。。。
+要记得更新笔记。。。
