--- a/_posts/git/2018-07-09-learngit.md
+++ b/_posts/git/2018-07-09-learngit.md
@@ -1,5 +1,6 @@
 ---
 layout: blog
+road: true
 istop: true
 title: "三天的Git版本控制学习正确姿势"
 background-image: http://ot1cc1u9t.bkt.clouddn.com/17-7-16/38390376.jpg
