--- a/_posts/计算机科学/2018-09-04-汇编学习（一）.md
+++ b/_posts/计算机科学/2018-09-04-汇编学习（一）.md
@@ -16,7 +16,9 @@ tags:
 ## 汇编的环境配置
 本身环境win10系统
 ### 下载DOSBox和MASM
-其中‘MASM’里面要下载'debug'，'link'，'masm'，'exe2bin'。
+其中‘MASM’里面要下载'debug'，'link'，'masm'，'exe2bin'。  
+下载地址：  
+[8086汇编小站](http://www.x86asm.com/#)
 ### 配置部分
 1.进入这个蓝黑界面进行虚拟的配置
 ![汇编配置1](https://github.com/diqiu11/digongzi.github.io/raw/master/style/images/1.PNG)
