--- a/_posts/计算机科学/2018-09-04-汇编学习中断（二）.md
+++ b/_posts/计算机科学/2018-09-04-汇编学习中断（二）.md
@@ -3,8 +3,8 @@ layout: blog
 road: true
 background: green
 background-image: http://ot1cc1u9t.bkt.clouddn.com/17-7-15/43335546.jpg
-title:  "汇编学习记录（一）"
-date:   2018-09-5
+title:  "汇编学习记录（二）"
+date:   2018-09-14
 category: 计算机科学
 tags:
 - 汇编
