--- a/_posts/计算机科学/2018-09-04-汇编学习（一）.md
+++ b/_posts/计算机科学/2018-09-04-汇编学习（一）.md
@@ -26,30 +26,30 @@ tags:
 2.进行如图配置
 ![汇编配置2](https://github.com/diqiu11/digongzi.github.io/raw/master/style/images/2.PNG)
 
-3修改文件使软件一直处于mount的状态
+3.修改文件使软件一直处于mount的状态
 ![汇编配置3](https://github.com/diqiu11/digongzi.github.io/raw/master/style/images/3.PNG)
 
 4.配置masm
 配置好路径后，将masm文件夹放入dos文件夹中，另可创建一个asm文件夹放置写的程序
 
 ## Debug的基本指令
-debug的R命令查看、改变CPU寄存器的内容；
-debug的D命令查看内存中的内容；
-debug的E命令改写内存中的内容；
-debug的U命令将机器指令改变为汇编指令；
-debug的T命令执行一条指令；
-debug的A命令以汇编指令的格式在内存中写入一条机器指令；
+debug的R命令查看、改变CPU寄存器的内容；  
+debug的D命令查看内存中的内容；  
+debug的E命令改写内存中的内容；  
+debug的U命令将机器指令改变为汇编指令；  
+debug的T命令执行一条指令；  
+debug的A命令以汇编指令的格式在内存中写入一条机器指令；  
 
 ## 汇编涉及的14个寄存器
-AX,BX,CX,DX,SI,DI,SP,BP,IP,CS,SS,DS,ES,PSW.
-通用寄存器：AX,BX,CX,DX.
-段寄存器：CS,DS,SS,ES.
-CS:IP  ==  段地址和遍移地址
-SS:SP  ==  栈段寄存器
-其中栈段寄存器为重要理解内容
+AX,BX,CX,DX,SI,DI,SP,BP,IP,CS,SS,DS,ES,PSW.  
+通用寄存器：AX,BX,CX,DX.  
+段寄存器：CS,DS,SS,ES.  
+CS:IP  ==  段地址和遍移地址  
+SS:SP  ==  栈段寄存器  
+其中栈段寄存器为重要理解内容  
 
-## 认识第一个汇编程序
-(```)
+## 认识第一个汇编程序  
+(```)  
 
 	assume cs:codesg
 
@@ -64,6 +64,6 @@ SS:SP  ==  栈段寄存器
 		codesg ends
 
 	end  
-(```)  
+(```)   
 汇编程序包括两部分，第一部分是代码和数据，它们交给寄存器进行运算和处理，第二部分是伪代码，伪代码又编译器来执行，就是masm。
 将汇编程序生成一个exe可执行文件，至此一个完整的程序就出来了。
