--- a/_posts/计算机科学/2018-09-04-汇编学习（一）.md
+++ b/_posts/计算机科学/2018-09-04-汇编学习（一）.md
@@ -16,7 +16,7 @@ tags:
 ## 汇编的环境配置
 本身环境win10系统
 ### 下载DOSBox和MASM
-其中‘MASM’里面要下载'debug'，'link'，'masm'，'exe2bin'。  
+其中‘MASM’里面要下载‘debug‘，‘link‘，‘masm‘，‘exe2bin‘。  
 下载地址：  
 [8086汇编小站](http://www.x86asm.com/#)
 ### 配置部分
@@ -30,7 +30,7 @@ tags:
 ![汇编配置3](https://github.com/diqiu11/digongzi.github.io/raw/master/style/images/3.PNG)
 
 4.配置masm
-配置好路径后，将masm文件夹放入dos文件夹中，另可创建一个asm文件夹放置写的程序
+配置好路径后，将masm文件夹放入dos文件夹中，另可创建一个asm文件夹放置写的程序。
 
 ## Debug的基本指令
 debug的R命令查看、改变CPU寄存器的内容；  
@@ -49,7 +49,7 @@ SS:SP  ==  栈段寄存器
 其中栈段寄存器为重要理解内容  
 
 ## 认识第一个汇编程序  
-(```)  
+``` 
 
 	assume cs:codesg
 
@@ -64,6 +64,6 @@ SS:SP  ==  栈段寄存器
 		codesg ends
 
 	end  
-(```)   
+```
 汇编程序包括两部分，第一部分是代码和数据，它们交给寄存器进行运算和处理，第二部分是伪代码，伪代码又编译器来执行，就是masm。
 将汇编程序生成一个exe可执行文件，至此一个完整的程序就出来了。
