--- a/_posts/计算机科学/2018-09-04-汇编学习（一）.md
+++ b/_posts/计算机科学/2018-09-04-汇编学习（一）.md
@@ -14,7 +14,7 @@ tags:
  
   
 ## 汇编的环境配置
-本身环境win10系统
+本身环境win10系统，X86只有在32位的win7或者XP上有，如果机器性能条件足够，可以用虚拟机运行系统
 ### 下载DOSBox和MASM
 其中‘MASM’里面要下载‘debug‘，‘link‘，‘masm‘，‘exe2bin‘。  
 下载地址：  
