--- a/_posts/计算机科学/2018-09-16-汇编学习寻址（三）.md
+++ b/_posts/计算机科学/2018-09-16-汇编学习寻址（三）.md
@@ -24,7 +24,16 @@ tags:
 ![汇编](https://github.com/diqiu11/digongzi.github.io/raw/master/style/images/4.PNG)
 抽象  
 红色的是段地址，蓝色的是偏移地址
-
+### 汇编第三版过程
+![汇编](https://github.com/diqiu11/digongzi.github.io/raw/master/style/images/5.PNG)  
+![汇编](https://github.com/diqiu11/digongzi.github.io/raw/master/style/images/6.PNG)  
+![汇编](https://github.com/diqiu11/digongzi.github.io/raw/master/style/images/7.PNG)  
+![汇编](https://github.com/diqiu11/digongzi.github.io/raw/master/style/images/8.PNG)  
+![汇编](https://github.com/diqiu11/digongzi.github.io/raw/master/style/images/9.PNG)  
+![汇编](https://github.com/diqiu11/digongzi.github.io/raw/master/style/images/10.PNG)  
+![汇编](https://github.com/diqiu11/digongzi.github.io/raw/master/style/images/11.PNG)  
+![汇编](https://github.com/diqiu11/digongzi.github.io/raw/master/style/images/12.PNG)  
+![汇编](https://github.com/diqiu11/digongzi.github.io/raw/master/style/images/13.PNG)  
 
 ## 寄存器的种类
 汇编语言第三版中的X86的寄存器：  
