--- a/_posts/计算机科学/2018-09-16-汇编学习寻址（三）.md
+++ b/_posts/计算机科学/2018-09-16-汇编学习寻址（三）.md
@@ -2,7 +2,7 @@
 layout: blog
 road: true
 istop: true
-title: "汇编学习之寻址"
+title: "汇编学习寻址（三）"
 background-image: http://ot1cc1u9t.bkt.clouddn.com/17-7-16/38390376.jpg
 date:  2017-09-16 23:45:56
 category: git
