--- a/_posts/计算机科学/2018-10-18-网络规划（一）.md
+++ b/_posts/计算机科学/2018-10-18-网络规划（一）.md
@@ -165,6 +165,6 @@ Internet 接入技术可选择双100Mbps光纤局域网接入或1000Mbp光纤局
 ..................  
 每个子网可以包含最多：62个IP地址（满足每个人一个IP地址）  
 
-
-以上转载自希赛学院
+  
+以上转载自希赛学院答案
 
