--- a/_posts/交换路由/2019-03-29-bgp.md
+++ b/_posts/交换路由/2019-03-29-bgp.md
@@ -14,6 +14,7 @@ tags:
  
   
 
+## 路由技术
 路由技术大体分**igp**与**bgp**，即内部网关协议与外部网关协议，外部网关协议又称为**边缘网关协议**。  
 bgp有**ibgp**和**ebgp**之分。bgp主要应用在as即自治域与as之间的网络互联，里面有大量的内部网关协议，  
 isis一般应用于电信用户，ospf应用于企业上，bgp应用于域间路由协议。  
