--- a/_posts/交换路由/2019-04-01-MSTP.md
+++ b/_posts/交换路由/2019-04-01-MSTP.md
@@ -36,8 +36,28 @@ MSTP的好处是需要区分用户或业务流量，并实现负载分担。
 
 
 ## MSTP实验实现
+![MSTP](https://github.com/diqiu11/digongzi.github.io/raw/master/style/images/MSTPexperience.PNG)  
+配置MSTP基本配置  
+[S1]stp mode mstp  
+[S1]stp region-configuration  
+[S1-mst-region]region-name RG1  
+[S1-mst-region]instance 1 vlan 1 TO 10  
+[S1-mst-region]instance 2 vlan 11 to 20  
+[S1-mst-region]active region-configuration //激活域配置
+查看关系：  
+display stp region-configuration  
 
+修订级别：  
+[S1-mst-region]revision-level 1  
+  
+环路保护：  
+[S3-Ethernet0/0/7]stp loop-protection  
+  
+配置TC-BPDU保护功能：  
+[S1]stp tc-protection  
 
 ## MSTP拓展
 
-
+堆叠适用于接入交换机端口数量不够的情况，没有真正意义上的冗余效果。  
+端口聚合适用于单一设备使用多条线路连接的情况，实现线路级别的冗余。  
+VRRP适用于于多套相同设备连接的情况，实现设备级别的冗余。  
