--- a/_posts/交换路由/2019-04-02-VLAN间特性.md
+++ b/_posts/交换路由/2019-04-02-VLAN间特性.md
@@ -42,6 +42,8 @@ vlan协议基于ISL（思科专有的vlan封装协议）。
 [SW1-ospf-1-area-0.0.0.0]network 10.0.0.0 0.0.255.255  
 [SW1-ospf-1-area-0.0.0.0]network 1.1.1.0 0.0.0.255	//于交换机发布路由  
   
+[R2-ospf-1]silent-interface GigabitEthernet 0/0/1 //对接口标明只发布路由信息，不建立邻居。  
+  
 ip route-static 0.0.0.0 0.0.0.0 10.0.10.2  
 ip route-static 0.0.0.0 0.0.0.0 10.0.20.2 //路由器端  
 
