--- a/_posts/交换路由/2019-04-08-MPLS.md
+++ b/_posts/交换路由/2019-04-08-MPLS.md
@@ -16,7 +16,8 @@ tags:
 
 ### MPLS的原理
 LDP模式的MPLS配置，实际上就是给MPLS配上一个标签，运用标签对网络流量进行控制，比如限制。  
-
+在城域网中MPLS VPN，使用于和对端的总公司或分公司建立端对端的连接。  
+IP VPN--MPLS VPN.  
 
 ### MPLS-ldp的实验
 
