--- a/_posts/交换路由/2019-04-11-BFD.md
+++ b/_posts/交换路由/2019-04-11-BFD.md
@@ -46,5 +46,19 @@ BFD检测加快OSPF收敛速度。
 [R1-ospf-1]bfd all-interfaces enable  
 [R1]dis ospf bfd session all  
 
+#### BFD于VRRP联动配置的实验
+![vrrp-bfd](https://github.com/diqiu11/digongzi.github.io/raw/master/style/images/vrrp-bfd.PNG)  
+配置ip地址和路由协议，在中间两台交换机中做vlan划分，区分规整流量的走向。  
+配置ospf的端口cost值，将流量走向引导至R2中。  
+将下R2,R3下联端口载ospf中静音，不发布出去。  
+[R1]bfd  
+[R1]bfd 1 bind peer-ip 192.168.45.2 source-ip 10.0.12.1 auto //设置R1的
+[R1-bfd-session-1]commit  
+
+[R2]bfd  
+[R2]bfd 1 bind peer-ip 10.0.12.1 source-ip 192.168.45.2 auto  
+[R2-bfd-session-1]commit  
+[R2-GigabitEthernet0/0/0]vrrp vrid 1 track bfd-session session-name 1 reduced 60  
+
 
 
